--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>comms-accelerate-main</title>
+    <title>TechMaster60</title>
     <meta name="description" content="comms-accelerate-main - Professional Web Application" />
     <meta name="author" content="comms-accelerate-main" />
 
